--- a/css/styles.css
+++ b/css/styles.css
@@ -1,109 +1,58 @@
-/*цвет хедера фон #FFFFFF  */
-/* цвет боди фон #E5E5E5 */
-/* цвет в нутри карточек #EEEEEE */
 /* Цвет основгоно текска #212121 */
-/* цвет второстипенного текста #757575 */
 /* цвет футера фон  #2F303A */
 /* мыло  телефон  футер rgba(255, 255, 255, 0.6)  адресс #FFFFFF*/
-/* цвет фона кнопок фильтра #F5F4FA */
+/* мыло  телефон  футер rgba(255, 255, 255, 0.6) */
 /* цвет кнопок и активных ссылок при наведении #2196F3 */
-:root {--primary-text-color:#212121; 
-    --second-text-color:#757575 ;
-    --focus-hover-active-color:#2196F3;
-    --fon-main-color:#E5E5E5 ;
-    --btn-focus:#FFFFFF;
+:root {--primary-text-color: #212121;
+--second-text-color: #757575;
+--focus-hover-active-color: #2196F3;
+--text-footer-textbtn : #FFFFFF;
+--fon-footer-h1 :#2F303A;
+--mail-tel:rgba(255, 255, 255, 0.6);
  }
-
+.link  {
+    text-decoration: none;
+    color: inherit;
+}
 ul {list-style :none;}
 /* разметка хедера  */
-header .logo{Font-family: Raleway; 
-     Font-style:700;
-     Font-size: 26px ;
-     Line-height: 31px;}
+/*логотип  */
+.logo {
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 1.2;
+    letter-spacing: 0.03em;
+    text-decoration: none;
+}
+.logo .acent-logo {color:var(--focus-hover-active-color);}
+.logo {color:var(--primary-text-color);}
 
-.acent-logo{color:var(--focus-hover-active-color)}
-.logo{color:var(--primary-text-color)}
-
- header .link {
+.body-list {
     color:var(--primary-text-color);
-     
-     font-family: Roboto;
-     font-weight: 500;
-     font-size:14px;
-     Line-height:1.14;
-     
-    
 }
 
-.auth-nav a {
-    color:var(--second-text-color);
-    font-family: Roboto;
+/* навигация */
+
+
+.header-list .link:hover,
+.header-list .link:focus,
+.header-list .link.current {
+    color: var(--focus-hover-active-color);}
+
+.header-list .item {
+    font-family: 'Roboto';
+    font-style: normal;
     font-weight: 500;
-    font-size:14px;
-    Line-height:1.14;
-}
-
-header .link:hover, 
-header .link:focus,
-header .link.current {color:var(--focus-hover-active-color);}
-
-h1,
-h2 {
-    opacity: 0;
-}
-/* мєйн */
-
-main  {color:var(--primary-text-color)}
-h3 {font-family: Roboto ;
-     font-weight: 700; 
-     font-size: 18px; 
-     Line-height: 2; 
-     
-    
-}
-main p {Font-family: Roboto ;
-    Font-style: 400;
-    Font-size: 14px ;
-    Line-height: 1.70;
-color:var(--second-text-color)
-}
-
-main .list-btn {background-color: var(--bcg-btn-filtrs)
-
-
-
-} 
-button{font-family: Roboto;
-font-weight: 500;
-font-size: 16px;
-line-height: 1.6;}
-
-button:hover,button:focus {color:var(--btn-focus);background-color:var(--focus-hover-active-color);}
-
-main .descripion{color:var(--second-text-color);
-    font-family: Roboto; 
-    font-weight: 400; 
-    font-size: 16px ;
-    line-height: 1.87;
-    
-
-}
-
-/* футер  */
-footer {background-color:#2F303A ;
-
-}
-address {
-display: block;
-font-style: italic;
-}
-
-
-footer a {
-    font-family: Roboto;
-    font-weight: 400;
     font-size: 14px;
-    line-height: 1.71;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
 }
-.footer-list .item-map{color:var(--btn-focus)}
+
+.auth-nav .link {
+    color: var(--second-text-color);
+}
+
+
 
