хедер кнопки заголовок текст

--- a/css/styles.css
+++ b/css/styles.css
@@ -55,4 +55,36 @@ ul {list-style :none;}
 }
 
 
+/* btn */
+/* button {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+}*/
+.list-btn {font-family: 'Roboto';
+font-style: normal;
+font-weight: 500;
+font-size: 16px;
+line-height: 1.62 ;
+letter-spacing: 0.03em;
+color:var(--primary-text-color) }
+
+.btn:hover , 
+.btn:focus {background-color:var(--focus-hover-active-color);
+    color:var(--text-footer-textbtn)}
+
+.list .link-title {font-family: 'Roboto';
+font-style: normal;
+font-weight: 700;
+font-size: 18px;
+line-height: 2;
+letter-spacing: 0.06em;}    
+
+.description {font-family: 'Roboto';
+font-style: normal;
+font-weight: 400;
+font-size: 16px;
+line-height: 1.87;
+letter-spacing: 0.03em;
+} 
 
