--- a/css/styles.css
+++ b/css/styles.css
@@ -72,19 +72,42 @@ color:var(--primary-text-color) }
 .btn:hover , 
 .btn:focus {background-color:var(--focus-hover-active-color);
     color:var(--text-footer-textbtn)}
-
-.list .link-title {font-family: 'Roboto';
+ /* станция сортировка ))) */
+ .list .link-title {font-family: 'Roboto'; 
 font-style: normal;
 font-weight: 700;
 font-size: 18px;
 line-height: 2;
 letter-spacing: 0.06em;}    
 
-.description {font-family: 'Roboto';
+.list .descripion {font-family: 'Roboto';
 font-style: normal;
 font-weight: 400;
 font-size: 16px;
 line-height: 1.87;
 letter-spacing: 0.03em;
+color: var(--second-text-color);
 } 
 
+/* footer */
+.footer {
+    background-color: var(--fon-footer-h1);
+}
+
+
+
+ 
+  .footer .map {  
+    color: var(--text-footer-textbtn);
+}
+
+
+.item :last-child {
+    color: var(--mail-tel);
+    text-decoration: none;
+
+}
+
+.footer .map {
+    color: var(--text-footer-textbtn)
+ } 
