--- a/css/studio.css
+++ b/css/studio.css
@@ -73,13 +73,15 @@ letter-spacing: 0.06em;
 color:var(--text-footer-textbtn); background-color:var(--focus-hover-active-color);
 }
 /* benefits */
+
 .text-section {font-family: 'Roboto';
 font-style: normal;
 font-weight: 700;
 font-size: 36px;
 line-height: 1.16;
 text-align: center; 
-letter-spacing: 0.03em;}
+letter-spacing: 0.03em;
+color: var(--text-footer-textbtn);}
 
 .list .section-list {font-family: 'Roboto';
 font-style: normal;
