--- a/css/styles.css
+++ b/css/styles.css
@@ -117,5 +117,92 @@ color: var(--second-text-color);
     color: var(--text-footer-textbtn)
 }
 
- 
+ /* btn */
+ .section-btn {
+     background-color: var(--fon-footer-h1);
+ }
+
+ .text {
+     font-family: 'Roboto';
+     font-style: normal;
+     font-weight: 900;
+     font-size: 44px;
+     line-height: 1.36;
+     text-align: center;
+     letter-spacing: 0.06em;
+     text-transform: uppercase;
+     color: var(--text-footer-textbtn)
+ }
+
+ .section-btn .btn {
+     font-family: 'Roboto';
+     font-style: normal;
+     font-weight: 700;
+     font-size: 16px;
+     line-height: 1.87;
+     display: flex;
+     align-items: center;
+     text-align: center;
+     letter-spacing: 0.06em;
+
+     color: var(--text-footer-textbtn);
+     background-color: var(--focus-hover-active-color);
+ }
+
+ /* benefits */
+
+ .text-section {
+     font-family: 'Roboto';
+     font-style: normal;
+     font-weight: 700;
+     font-size: 36px;
+     line-height: 1.16;
+     text-align: center;
+     letter-spacing: 0.03em;
+     color: var(--text-footer-textbtn);
+ }
+
+ .list .section-list {
+     font-family: 'Roboto';
+     font-style: normal;
+     font-weight: 700;
+     font-size: 14px;
+     line-height: 1.14;
+     letter-spacing: 0.03em;
+     text-transform: uppercase;
+ }
+
+ .list .list-list {
+     font-family: 'Roboto';
+     font-style: normal;
+     font-weight: 400;
+     font-size: 14px;
+     line-height: 1.71;
+     letter-spacing: 0.03em;
+     color: var(--second-text-color);
+ }
+
+ /* team */
+ .team .team-name {
+     font-family: 'Roboto';
+     font-style: normal;
+     font-weight: 500;
+     font-size: 16px;
+     line-height: 1.18;
+
+     letter-spacing: 0.03em;
+ }
+
+ .list .descripion {
+     font-family: 'Roboto';
+     font-style: normal;
+     font-weight: 400;
+     font-size: 16px;
+     line-height: 1.18;
+
+
+
+     letter-spacing: 0.03em;
+     color: var(--second-text-color);
+ }
  
